# kgaf3_chatbot

./: .dockerignore  .env.docker.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.ko.md  README.md  configure.md  docker-compose.gpu.yml  docker-compose.yml  install.bat  install.sh  pyproject.toml  run.py  sharing_chtbot.ko.md  sharing_chtbot.md
.github/ci/: README.md  docker-publish.yml.disabled
af3-bridge/: README.ko.md  README.md  af3-mcp.service  af3_mcp_http.py  af3_mcp_server.py
app/: __init__.py  config.py  database.py  main.py
app/models/: af3.py  library.py  llm.py  openmm.py  smina.py  smina_rescore.py  target.py  ws.py
app/prompts/: screening_summary.txt  system.txt
app/routers/: _deps.py  chat.py  health.py  library.py  pages.py  screening.py  sessions.py  smina.py  system.py  target.py
app/services/: af3_client.py  af3_parser.py  chat_intent.py  complex_splitter.py  event_bus.py  graphrag_mcp.py  graphrag_service.py  history_service.py  library_service.py  llm_service.py  mcp_http.py  openmm_client.py  ranking_service.py  scoring_service.py  screening_service.py  smina_service.py  target_service.py
app/utils/: ids.py  log.py  validators.py
docs/: AF3_SETUP.ko.md  AF3_SETUP.md  BRIDGE.ko.md  BRIDGE.md  GRAPHRAG.ko.md  GRAPHRAG.md  INSTALL.ko.md  INSTALL.md  USAGE.ko.md  USAGE.md
installer/: configure_parser.py  healthpoll.py  preflight.py  verify_af3.py
patches/: af3_mcp_host_env.patch
scripts/: bootstrap_host_dirs.bat  bootstrap_host_dirs.sh  check_dependencies.sh
smina-mcp/: .dockerignore  Dockerfile.smina  README.md  pyproject.toml  server.py
smina-mcp/smina_mcp/: __init__.py  tools.py
static/css/: style.css
static/js/: app_state.js  chat.js  jobs_panel.js  result_charts.js  result_table.js  sidebar.js  system_bar.js  vs_viewer.js
templates/: base.html  index.html
