[project]
name = "kgaf3-chatbot"
version = "0.1.0"
description = "KG + AF3 chatbot: GraphRAG knowledge-graph Q&A + AlphaFold3 cofolding/smina rescoring, with a results web UI (MCP client)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.20.0",
    "structlog>=24.0",
    # MCP HTTP client
    "mcp>=1.0.0",
    # Chemistry I/O for SDF/SMI parsing (RDKit conda fallback acceptable)
    "rdkit>=2024.3.5",
    # OpenRouter is OpenAI-compatible -> use openai SDK
    "openai>=1.50.0",
    # GraphRAG (optional) is reached over MCP/SSE via the bundled graphrag-mcp
    # container — the Neo4j driver lives in that container, not here. The `mcp`
    # dependency above provides the SSE client (mcp.client.sse).
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
